- community ready for design

--- a/application/views/scripts/amazon/index.phtml
+++ b/application/views/scripts/amazon/index.phtml
@@ -1,1 +1,5 @@
-<h1>Bücher rund um den Tierpark</h1>
+<h1>Bücher rund um die Tiere im Zoo</h1>
+
+<?php foreach ($this->books as $book): ?>
+	<img src="<?php echo $book['image']; ?>" alt="Bild">
+<?php endforeach; ?>
