--- a/application/views/scripts/images/index.phtml
+++ b/application/views/scripts/images/index.phtml
@@ -1,9 +1,7 @@
+<?php echo $this->form; ?>		
 
-<?php echo $this->form; ?>
-
-<?php if (!empty($this->imageList)): ?>
 	<?php foreach ($this->imageList as $image): ?>
-		<?php echo $image['title']; ?>
-		<img src="<?php echo $image['image']; ?>" />
-	<?php endforeach; ?>
-<?php endif; ?>
+					<a  href="<?php echo $image['image']; ?>">
+					<img src="<?php echo $image['image']; ?>" />
+					</a>
+			<?php endforeach; ?>
