--- a/application/views/scripts/user/editdefaultprofile.phtml
+++ b/application/views/scripts/user/editdefaultprofile.phtml
@@ -1,3 +1,16 @@
+
+<?php if ($this->success === true): ?>
+	<p>Änderungen gespeichert.</p>
+<?php endif; ?>
+
+<?php if (!empty($this->errors)): ?>
+<ul>
+    <?php foreach($this->errors as $error): ?>
+        <li><?php echo $error; ?></li>
+    <?php endforeach; ?>
+</ul>
+<?php endif; ?>
+
 <?php echo $this->form; ?>
 
 <a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
