- added jquery effects

--- a/application/views/scripts/booking/index.phtml
+++ b/application/views/scripts/booking/index.phtml
@@ -16,6 +16,8 @@
 
 <?php echo $this->form; ?>
 
-<a href="#" id="showprices" >Preis anzeigen</a>
+<a href="#price" id="showprices" >Preis anzeigen</a>
 
 <div id="price"></div>
+
+<input type="submit" value="Ticket buchen" />
