--- a/application/views/scripts/user/editaddress.phtml
+++ b/application/views/scripts/user/editaddress.phtml
@@ -1,3 +1,10 @@
+<?php echo $this->headLink()->appendStylesheet('/css/3rdParty/jquery.ui.css'); ?>
+<script type="text/javascript" src="/js/3rdParty/jQuery.js"></script>
+<script type="text/javascript" src="/js/3rdParty/date.js"></script>
+<script type="text/javascript" src="/js/3rdParty/jquery.ui.js"></script>
+<script type="text/javascript" src="/js/3rdParty/jquery.datePicker.js"></script>
+<script type="text/javascript" src="/js/editaddress.js"></script>
+
 
 <h1>Adressdaten bearbeiten</h1>
 
