--- a/application/views/scripts/user/editprivate.phtml
+++ b/application/views/scripts/user/editprivate.phtml
@@ -1,4 +1,6 @@
 
+<script type="text/javascript" src="/js/3rdParty/jQuery.js"></script>
+<script type="text/javascript" src="/js/editprivate.js"></script>
 <h1>Persönliche Angabe bearbeiten</h1>
 
 <?php echo $this->success; ?>
