--- a/application/views/scripts/amazon/index.phtml
+++ b/application/views/scripts/amazon/index.phtml
@@ -1,5 +1,8 @@
 <h1>Bücher rund um die Tiere im Zoo</h1>
 
 <?php foreach ($this->books as $book): ?>
+	<a href="<?php echo $book['link']; ?>" target="_blank" >
 	<img src="<?php echo $book['image']; ?>" alt="Bild">
+	</a>
+	<?php //echo $book['title']; ?>
 <?php endforeach; ?>
