--- a/application/views/scripts/investorrelation/index.phtml
+++ b/application/views/scripts/investorrelation/index.phtml
@@ -1,1 +1,5 @@
 <h1>Investor Relations</h1>
+
+<a href="<?php echo $this->baseUrl . '/investorrelation/turnover?ofc=/investorrelation/getturnover'; ?>">Umsatz</a>
+<br />
+<a href="<?php echo $this->baseUrl . '/investorrelation/visitor?ofc=/investorrelation/getvisitor'; ?>">Besucherstruktur</a>
