--- a/application/views/scripts/map/index.phtml
+++ b/application/views/scripts/map/index.phtml
@@ -1,1 +1,7 @@
+/**
+<script type="text/javascript" src="http://maps.google.com/maps/geo?q=1600+Amphitheatre+Parkway,+Mountain+View,+CA&output=json&oe=utf8&sensor=true_or_false&key=ABQIAAAA5mucABozww8qP3ZPcWEPXxT2yXp_ZAY8_ufC3CFXhHIE1NvwkxT-tlqQDMYoEdFhb2zcm_7iNGfbKA"></script>*/
+
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true&amp;key=ABQIAAAA5mucABozww8qP3ZPcWEPXxT2yXp_ZAY8_ufC3CFXhHIE1NvwkxT-tlqQDMYoEdFhb2zcm_7iNGfbKA" type="text/javascript"></script>
+
+
 <script type="text/javascript" src="/js/map.js"></script>
