--- a/application/views/scripts/user/changepassword.phtml
+++ b/application/views/scripts/user/changepassword.phtml
@@ -2,19 +2,27 @@
 <script type="text/javascript" src="/js/3rdParty/jquery.validate.js"></script>
 <script type="text/javascript" src="/js/register.js"></script>
 
-<h1>Passwort ändern</h1>
-
+<br />
+<br />
+<h1 align="center">Passwort ändern</h1>
+<br />
+<br />
+<br />
 <?php if ($this->success === true): ?>
-	<p>Änderungen gespeichert.</p>
+	<div class="success">
+		<p>Änderungen gespeichert.</p>
+	</div>
 <?php endif; ?>
 
 
 <?php if (!empty($this->errors)): ?>
-<ul>
-    <?php foreach($this->errors as $error): ?>
-        <li><?php echo $error; ?></li>
-    <?php endforeach; ?>
-</ul>
+	<div class="error">
+		<ul>
+			<?php foreach($this->errors as $error): ?>
+				<li><?php echo $error; ?></li>
+			<?php endforeach; ?>
+		</ul>
+	</div>
 <?php endif; ?>
 
 
