--- a/application/views/scripts/user/mustbe.phtml
+++ b/application/views/scripts/user/mustbe.phtml
@@ -1,7 +1,14 @@
-<h1>Bitte Anmelden</h1>
+<br />
+<br />
+<h1 align="center">Bitte anmelden</h1>
+<br />
+<br />
+<br />
 
-<p>Um die angeforderte Seite zu sehen, müssen Sie sich erst 
-<a href="<?php echo $this->baseUrl . '/user/login'; ?>">einloggen</a> 
-oder kostenlos
-<a href="<?php echo $this->baseUrl . '/user/register'; ?>">registrieren</a> 
-.</p>
+<div class="error">
+	<p>Um die angeforderte Seite zu sehen, müssen Sie sich erst 
+	<a href="<?php echo $this->baseUrl . '/user/login'; ?>">einloggen</a> 
+	oder kostenlos
+	<a href="<?php echo $this->baseUrl . '/user/register'; ?>">registrieren</a> 
+	.</p>
+</div>
