--- a/application/views/scripts/booking/index.phtml
+++ b/application/views/scripts/booking/index.phtml
@@ -6,20 +6,74 @@
 <script type="text/javascript" src="/js/3rdParty/jquery.datePicker.js"></script>
 <script type="text/javascript" src="/js/booking.js"></script>
 
+<div class="booking">
 
+	<br />
+	<br />
+	<h1 align="center">Ticketbuchung</h1>
+	<br />
+	<br />
+	<br />
 
-<h1>Ticket Buchung</h1>
+	<?php if (!isset($this->content)): ?>
+	<p>Unser Ticket-Rechner zeigt Ihnen automatisch den günstigsten Tarif an. Zum Beispiel  wird Ihnen ab einer Anzahl von 10 Personen automatisch der Gruppentarif gebucht, ohne dass Sie dies angeben müssen. Eine Übersicht über unsere Preise finden Sie <a href="<?php echo $this->baseUrl . '/booking/prices'; ?>">hier</a>.</p>
 
-<?php if (!isset($this->content)): ?>
-<p>Unser Ticket-Rechner zeigt Ihnen automatisch den günstigsten Tarif an. Zum Beispiel  wird Ihnen ab einer Anzahl von 10 Personen automatisch der Gruppentarif gebucht, ohne dass Sie dies angeben müssen. Eine Übersicht über unsere Preise finden Sie <a href="<?php echo $this->baseUrl . '/booking/prices'; ?>">hier</a>.</p>
+	<?php endif; ?>
 
-<p>Sollten Sie uns öfters besuchen, lohnt sich vielleicht unser <a href="<?php echo $this->baseUrl . '/booking/year'; ?>">Jahreskarten angebot</a>.</p>
-<?php endif; ?>
+		<?php if (isset($this->error)): ?>
+		<div class="error">
+			<?php echo $this->error; ?>
+		</div>
+		<?php endif; ?>
+		<?php if (isset($this->content)): ?>
+			<p>Danke für Ihre Buchung! <br /> Ihre Bestätigung wird Ihnen per Email zugesendet. <br /> Wir freuen uns auf Ihren Besuch.</p>
+			<br />
+			<hr />
+			<br />
+			<h2>Ticketinformationen</h2>
+			<?php echo $this->content['date']['startdate'];?> 
+			<?php echo (isset($this->content['date']['enddate'])) ? ' - ' . $this->content['date']['enddate'] :""; ?>
+			<br />
+			Tarif: <?php echo $this->content['tarif'];?>
+			<br />
+			<br />
+				<table>
+					<tr>
+						<th></th>
+						<th>Anzahl</th>
+						<th>Gesamtpreis</th>
+					</tr>
+					<!-- <tr>
+						 <td>Datum:</td>
+						<td>
+						</td>
+					</tr> -->
 
-<?php echo $this->error; ?>
-<?php if (isset($this->content)): ?>
-	<p>Danke für Ihre Buchung. Ihre Bestätigung wird Ihnen per Email zugesendet. Wir freuen uns auf Ihren Besuch.</p>
-	<?php var_dump($this->content); ?>
-	<a href="<?php echo $this->baseUrl . '/pdf/' . $this->ticketName; ?>">Ticket downloaden</a>	
-<?php endif; ?>
+						<td>Erwachsene:</td>
+						<td><?php echo $this->content['adult'][0]; ?></td>
+						<td><?php echo $this->content['adult'][1]; ?></td>
+					</tr>
+						<td>Kinder:</td>
+						<td><?php echo $this->content['child'][0]; ?></td>
+						<td><?php echo $this->content['child'][1]; ?></td>
+					<tr>
+					</tr>
+						<td>Studenten:</td>
+						<td><?php echo $this->content['student'][0]; ?></td>
+						<td><?php echo $this->content['student'][1]; ?></td>
+					<tr>
+						<td>Summe:</td>
+						<td></td>
+						<td><?php echo $this->content['sum']; ?></td>
+					</tr>
+				</table>
+				
+			<br />
+			<br />
+			<br />
+			
+			<?php var_dump($this->content); ?>
+			<a href="<?php echo $this->baseUrl . '/pdf/' . $this->ticketName; ?>">Ticket downloaden</a>	
+		<?php endif; ?>
+</div>
 <?php echo $this->form; ?>
