--- a/application/views/scripts/booking/priceajax.phtml
+++ b/application/views/scripts/booking/priceajax.phtml
@@ -1,4 +1,43 @@
-<h1>Aktueller Preis:</h1>
+<div class="booking">
+	<h2>Aktueller Preis:</h2>
 
-<?php echo $this->error; ?>
-<?php var_dump($this->content); ?>
+	<?php if (isset($this->error)): ?>
+	<div class="error">
+		<?php echo $this->error; ?>
+	</div>
+	<?php endif; ?>
+	<?php if (isset($this->content)): ?>
+		<?php echo $this->content['date']['startdate'];?> 
+		<?php echo (isset($this->content['date']['enddate'])) ? ' - ' . $this->content['date']['enddate'] :""; ?>
+		<br />
+		Tarif: <?php echo $this->content['tarif'];?>
+		<br />
+			<table>
+				<tr>
+					<th></th>
+					<th>Anzahl</th>
+					<th>Gesamtpreis</th>
+				</tr>
+
+
+					<td>Erwachsene:</td>
+					<td><?php echo $this->content['adult'][0]; ?></td>
+					<td><?php echo $this->content['adult'][1]; ?></td>
+				</tr>
+					<td>Kinder:</td>
+					<td><?php echo $this->content['child'][0]; ?></td>
+					<td><?php echo $this->content['child'][1]; ?></td>
+				<tr>
+				</tr>
+					<td>Studenten:</td>
+					<td><?php echo $this->content['student'][0]; ?></td>
+					<td><?php echo $this->content['student'][1]; ?></td>
+				<tr>
+					<td>Summe:</td>
+					<td></td>
+					<td><?php echo $this->content['sum']; ?></td>
+				</tr>
+			</table>
+	<?php endif; ?>
+</div>
+<?php //var_dump($this->content); ?>
