--- a/application/views/scripts/booking/showtickets.phtml
+++ b/application/views/scripts/booking/showtickets.phtml
@@ -1,8 +1,12 @@
 <script type="text/javascript" src="/js/3rdParty/jQuery.js"></script>
 <script type="text/javascript" src="/js/showtickets.js"></script>
 
-<h1>Ihre Ticketsbuchungen</h1>
-
+<br />
+<br />
+<h1 align="center">Ihre Ticketbuchungen</h1>
+<br />
+<br />
+<br />
 <div id="storno"></div>
 
 <?php if (!empty($this->tickets)): ?>
