--- a/application/views/scripts/community/friends.phtml
+++ b/application/views/scripts/community/friends.phtml
@@ -1,3 +1,16 @@
-<h1><?php echo $this->fullname; ?>'s Freunde</h1>
+<div id="profile">
 
-<?php var_dump($this->friendsProfile); ?>
+	<br />
+	<br />
+	<br />
+	<h1 align="center"><?php echo $this->fullname; ?>'s Freunde</h1>
+	<br />
+	<br />
+	<br />
+
+	<?php var_dump($this->friendsProfile); ?>
+
+
+	
+	
+</div>
