--- a/application/views/scripts/community/index.phtml
+++ b/application/views/scripts/community/index.phtml
@@ -1,21 +1,52 @@
-<h1>Die Zoo Community</h1>
+<div id="profile">
+	<br />
+	<br />
+	<h1 align="center">Die Zoo Community</h1>
+	<br />
+	<br />
+	<br />
 
-<?php foreach ($this->paginator as $userData): ?>
-	<?php var_dump($userData); ?>
-	<a href="<?php echo $this->baseUrl 
-						. '/community/profile/user/' 
-						. $userData['user']['userid']; ?>
-			">
-	<?php echo $userData['user']['firstname']; ?>
-	</a>
-	<hr />
+	<?php foreach ($this->paginator as $userData): ?>
+		<?php //var_dump($userData); ?>
+		<br />
+		<h3><a href="<?php echo $this->baseUrl. '/community/profile/user/'. $userData['user']['userid']; ?>"><?php echo $userData['user']['username']; ?></a></h3>
+		<table>
+			<colgroup>
+				<col class="tableleft">
+				<col class="tablecenter">
+				<col class="tableright">
+			</colgroup>
+			<tr>
+				<th rowspan="6">
+				<img src="<?php echo $this->baseUrl."/img/uploads/".$userData['profile']['image']; ?>" width="100px"> </th>
 
-<?php endforeach; ?>
+			</tr>
+			<tr>
+				<td>Vorname</td>
+				<td><?php echo $this->baseUrl.$userData['user']['firstname']; ?></td>
+			</tr>
+			<tr>
+				<td>Nachname</td>
+				<td><?php echo $this->baseUrl.$userData['user']['lastname']; ?></td>
+			</tr>
+			<tr>
+				<td>E-Mail</td>
+				<td><?php echo $this->baseUrl.$userData['user']['mail']; ?></td>
+			</tr>
+			<tr>
+				<td><a href="<?php echo $this->baseUrl. '/community/profile/user/'. $userData['user']['userid']; ?>"><?php echo 'Profil anschauen'; ?></a></td>
+		</table>
+		<br />
+		<br />
+	<?php endforeach; ?>
 
-<?php echo $this->paginationControl(
-					$this->paginator,
-					'Sliding',
-					'/partials/pagination.phtml'); ?>
-																	
-
-
+		<br />
+		
+	<div id="normlinks">
+		<?php echo $this->paginationControl(
+							$this->paginator,
+							'Sliding',
+							'/partials/pagination.phtml'); ?>
+																			
+	</div>
+</div>
