--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -1,6 +1,13 @@
 <h1>Login</h1>
 
-<div class="error"><?php echo $this->error; ?>
+
+<?php if (!empty($this->error)): ?>
+	<div class="error">
+		<?php echo $this->error; ?>
+	</div>
+<?php endif; ?>
+
 <?php echo $this->loginForm; ?>
 
 <p><a href='<?php echo $this->baseUrl . "/user/register" ?>'>Noch nicht registriert? </a></p>
+	
