--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -5,18 +5,22 @@
 <h1>Registrierung</h1>
 
 <?php if ($this->success === true): ?>
-	<p>Herzlichen Glückwunsch! Sie wurden erfolgreich registriert. Hier können Sie sich nun 
-		<a href="<?php echo $this->baseUrl. '/user/login'; ?>">einloggen</a>.
-	</p>
+	<div class="success">
+		<p>Herzlichen Glückwunsch! Sie wurden erfolgreich registriert. Hier können Sie sich nun 
+			<a href="<?php echo $this->baseUrl. '/user/login'; ?>">einloggen</a>.
+		</p>
+	</div>
 <?php endif; ?>
 
 
 <?php if (!empty($this->errors)): ?>
-<ul>
-    <?php foreach($this->errors as $error): ?>
-        <li><?php echo $error; ?></li>
-    <?php endforeach; ?>
-</ul>
+	<div class="error">
+		<ul>
+			<?php foreach($this->errors as $error): ?>
+				<li><?php echo $error; ?></li>
+			<?php endforeach; ?>
+		</ul>
+	</div>
 <?php endif; ?>
 
 
