--- a/application/views/scripts/community/findfrienddefault.phtml
+++ b/application/views/scripts/community/findfrienddefault.phtml
@@ -3,8 +3,8 @@
 <script type="text/javascript" src="/js/findfriend.js"></script>
 
 
+<h1>Finde deine Freunde</h1>
 <?php echo $this->form; ?>
 
-<a href="<?php echo $this->baseUrl . '/community/findfriend'; ?>">Erweiterte Suche</a>
 
 <div id="showfriends"></div>
